oreilly-ckad/006-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ingress.example.com     ## <- hostname
    http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          serviceName: mywebserver
          servicePort: 80
